# examples-agents

./: .pre-commit-config.yaml  README.md  examples-agents.code-workspace  pyproject.toml
anthropic-example/: .env.example  docker-compose.yml  pyproject.toml
anthropic-example/anthropic_example/: main.py  settings.py  shared.py
anthropic-example/anthropic_example/agent/: tools.py
anthropic-example/anthropic_example/pages/: indexing.py
anthropic-example/anthropic_example/rag/: embedding.py  indexing.py  loading.py  splitter.py
anthropic-example/anthropic_example/services/: anthropic.py  jira.py  milvus.py
guardrails-example/: .env.example  pyproject.toml
guardrails-example/config/: config.yml  rails.co
guardrails-example/guardrails_example/: main.py  settings.py
langchain-example/: pyproject.toml
langchain-example/langchain_example/: main.py  settings.py
langchain-example/langchain_example/agent/: core.py  memory.py  tools.py
langchain-example/langchain_example/controllers/: tools.py
langchain-example/langchain_example/services/: __init__.py  jira.py
openai-example/: pyproject.toml
openai-example/openai_example/: main.py  settings.py
openai-example/openai_example/agent/: tools.py
openai-example/openai_example/controllers/: tools.py
openai-example/openai_example/services/: __init__.py  jira.py  openai.py
workflows/prompt-chain-example/: README.md  pyproject.toml
workflows/prompt-chain-example/prompt_chain_example/: chain.py  main.py  models.py  settings.py  workflow.py
workflows/prompt-chain-example/prompt_chain_example/services/: gemini.py
