[tool.poetry]
name = "examples-agents"
version = "0.1.0"
description = "A curated collection of diverse AI agent examples, showcasing various techniques and frameworks."
authors = ["Malte Hedderich <github@hedderich.pro>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
