[tool.poetry]
name = "anthropic-example"
version = "0.1.0"
description = ""
authors = ["Malte Hedderich <github@hedderich.pro>"]
readme = "README.md"
packages = [{ include = "anthropic_example" }]

[tool.poetry.dependencies]
python = "^3.12"
anthropic = "^0.30.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
streamlit = "^1.36.0"
transformers = "^4.42.3"
torch = "^2.3.1"
pymilvus = "^2.4.4"
pypdf = "^4.2.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
watchdog = "^4.0.1"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
