[tool.poetry]
name = "guardrails-example"
version = "0.1.0"
description = ""
authors = ["Malte Hedderich <github@hedderich.pro>"]
readme = "README.md"
packages = [{ include = "guardrails_example" }]

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "^1.36.0"
pydantic-settings = "^2.3.3"
openai = "^1.40.3"
nemoguardrails = "^0.9.1.1"
langchain-openai = "^0.1.21" # nemoguardrails uses langchain in the background
tqdm = "^4.66.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
