[tool.poetry]
name = "langchain-example"
version = "0.1.0"
description = ""
authors = ["Malte Hedderich <github@hedderich.pro>"]
readme = "README.md"
packages = [{ include = "langchain_example" }]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
langchain = "^0.2.5"
pydantic-settings = "^2.3.3"
langchain-community = "^0.2.5"
langchain-openai = "^0.1.9"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
watchdog = "^4.0.1"
types-requests = "^2.32.0.20240622"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
