[tool.poetry]
name = "openai-example"
version = "0.1.0"
description = ""
authors = ["Malte Hedderich <github@hedderich.pro>"]
readme = "README.md"
packages = [{ include = "openai_example" }]

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.35.3"
pydantic-settings = "^2.3.3"
streamlit = "^1.36.0"
pydantic = "^2.7.4"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"
pre-commit = "^3.7.1"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
